--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
     "react-photoswipe-gallery": "^2.2.7",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.5"
   },
   "devDependencies": {
